Changes to the working notebooks

--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -121,12 +121,8 @@
     "    def _getNodeStartFit(self):\n",
     "        nodeStartTest = []\n",
     "        for node in range(1,len(self.parentGraph.nodes)+1):\n",
-    "            nodeEdgePaths = [0]\n",
-    "            for edge,pathN in self.parentGraph.edgePaths.items():\n",
-    "                if edge[1]==node:\n",
-    "                    nodeEdgePaths.append(pathN)\n",
-    "            \n",
-    "            nodeStartTest.append(self.parentGraph.pathStarts[node-1]-max(nodeEdgePaths))\n",
+    "            nodeStartTest.append(self.parentGraph.pathStarts[node-1] - \\\n",
+    "                                 max([pathN for edge,pathN in self.parentGraph.edgePaths.items() if edge[1]==node],default=0))\n",
     "        return nodeStartTest\n",
     "            \n",
     "    def _generateTree(self,byPath=True):\n",
@@ -139,11 +135,14 @@
     "            inEdge = self.originalGraph.in_degree\n",
     "            outEdge = self.originalGraph.out_degree\n",
     "            startingNodes = np.arange(1,len(inEdge)+1)\n",
-    "            \n",
+    "        \n",
     "        selectedOutPaths = np.array(outEdge)[startingNodes-1]    \n",
     "        self.startingNodes = startingNodes[np.where(selectedOutPaths==np.max(selectedOutPaths))]\n",
     "        selectedInPaths = np.array(inEdge)[startingNodes-1]\n",
     "        self.startingNodes = startingNodes[np.where(selectedInPaths==np.min(selectedInPaths))].tolist()\n",
+    "        self.startingNodes = set(self.startingNodes)\n",
+    "        self.startingNodes.update((np.where(np.array(inEdge)==0)[0]+1).tolist())\n",
+    "        self.startingNodes = list(self.startingNodes)\n",
     "#         self.startingNodes.sort(key=[self.parentGraph.pathStarts[node] for node in self.startingNodes])\n",
     "        \n",
     "        if len(self.startingNodes)>0:\n",
@@ -173,7 +172,10 @@
     "            # get all edges coming to given node in the full graph\n",
     "            graphInEdgeList = list(self.originalGraph.in_edges(node))\n",
     "            # get all edges coming to a given node in the tremaux tree\n",
-    "            treeInEdgeList = list(treeCombined.in_edges(node))\n",
+    "            try:\n",
+    "                treeInEdgeList = list(treeCombined.in_edges(node))\n",
+    "            except nx.NetworkXError:\n",
+    "                treeInEdgeList = []\n",
     "#             print(f'Node: {node}')\n",
     "#             print(f'Graph edges: {graphInEdgeList}')\n",
     "#             print(f'Tree edges: {treeInEdgeList}')\n",
@@ -433,13 +435,6 @@
    "source": [
     "notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
