--- a/03_synteny.ipynb
+++ b/03_synteny.ipynb
@@ -45,6 +45,7 @@
       "Converted 04_utils.ipynb.\n",
       "Converted 05_export.ipynb.\n",
       "Converted deBruijnGraphProcessing.ipynb.\n",
+      "Converted graphTesting.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -75,14 +76,13 @@
     "from skbio.sequence import DNA\n",
     "\n",
     "from dnasim.IO import writeFASTA\n",
-    "from dnasim.simulation import inverseSequence"
+    "from dnasim.simulation import inverseSequence\n",
+    "from pangraph_constructor.utils import bidict"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "datadir = '../../1001G/annotation'\n",
     "gfadir = '../../1001G/pantograph/data'\n",
@@ -93,10 +93,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#Parameters\n",
     "doSequences = False\n",
@@ -113,13 +111,19 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def readTransMap(transMapFile):\n",
+    "def readTransMap(transMapFile,ATaccessionName='araport'):\n",
     "    # reading and preparing transmap in pandas format\n",
     "    transMap = pd.read_csv(transMapFile,delimiter='\\t')\n",
+    "    transMap.fillna('',inplace=True)\n",
     "    transMap.rename(columns={'Orthogroup:':'orthogroup'},inplace=True)\n",
     "    transMap['orthogroup'] = transMap.orthogroup.str.rstrip(':')\n",
     "    transMap.set_index('orthogroup',inplace=True)\n",
-    "    return transMap"
+    "#     transMap.fillna('',inplace=True)\n",
+    "    if ATaccessionName is not None:\n",
+    "        ATTransMap = transMap[ATaccessionName]\n",
+    "        return bidict({og:ATTransMap[og].split(', ') for og in ATTransMap.index})\n",
+    "    else:\n",
+    "        return transMap"
    ]
   },
   {
@@ -129,11 +133,12 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def generateOrder(files,priorityAccession='TIAR10'):\n",
-    "    ind = [idx for idx,file in enumerate(files) if priorityAccession in file][0]\n",
+    "def generateOrder(files, priorityAccession='TIAR10'):\n",
     "    idxList = list(range(len(files)))\n",
-    "    del idxList[ind]\n",
-    "    idxList = [ind] + idxList\n",
+    "    if priorityAccession is not None:\n",
+    "        ind = [idx for idx, file in enumerate(files) if priorityAccession in file][0]\n",
+    "        del idxList[ind]\n",
+    "        idxList = [ind] + idxList\n",
     "    return idxList"
    ]
   },
@@ -159,8 +164,12 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def processAccession(annotationFile,sequenceFile=None):\n",
-    "    accessionID = os.path.splitext(os.path.basename(annotationFile))[0]\n",
+    "def processAccession(annotationFile, sequenceFile=None,\n",
+    "                     ATmap=None, isRef=False, accID=None):\n",
+    "    if accID is None:\n",
+    "        accessionID = os.path.splitext(os.path.basename(annotationFile))[0]\n",
+    "    else:\n",
+    "        accessionID = accID\n",
     "    annotationGen = skbio_read(annotationFile, format='gff3')\n",
     "    \n",
     "    sequenceDict = None\n",
@@ -176,9 +185,19 @@
     "        geneInts = annotation.query(metadata={'type':'gene'})\n",
     "        \n",
     "        for gene in geneInts:\n",
-    "            geneID = gene.metadata['ID'][7:]\n",
-    "            orthogroup = gene.metadata['OG']\n",
-    "            atNamesStr = gene.metadata.get('AT','')\n",
+    "            geneID = gene.metadata['ID'].split('.')[-1]\n",
+    "            if isRef and ATmap is not None:\n",
+    "                orthogroup = ATmap.inverse.get(geneID,[geneID])[0]\n",
+    "            elif isRef:\n",
+    "                raise ValueError(\"If reference is provided, then the TransMap (bidict) with bidirectional relation between reference and annotation IDs should be provided.\")\n",
+    "                #orthogroup = gene.metadata['ID']\n",
+    "            else:\n",
+    "                orthogroup = gene.metadata['OG']\n",
+    "                \n",
+    "            if ATmap is not None:\n",
+    "                atNamesStr = ATmap.get(orthogroup,[''])\n",
+    "            else:\n",
+    "                atNameStr = ['']\n",
     "            forward = gene.metadata['strand']=='+'\n",
     "            start,end = gene.bounds[0]\n",
     "            \n",
@@ -186,8 +205,10 @@
     "                geneSeq = sequenceDict[seqID][start:end+1]\n",
     "            else:\n",
     "                geneSeq = ''\n",
+    "            if isRef:\n",
+    "                pass\n",
     "            overlaps = getIDs(annotation.query(bounds=[(start,end)],metadata={'type':'gene'}))\n",
-    "            genes.append([geneID,orthogroup,seqID,accessionID,forward,start,end,atNameStr,geneSeq,overlaps])\n",
+    "            genes.append([geneID,orthogroup,seqID,accessionID,forward,start,end,atNamesStr,geneSeq,overlaps])\n",
     "    \n",
     "    genes = pd.DataFrame(genes,columns=['geneID','orthogroup','sequenceID','accessionID','forward','start','end','AT_str','geneSeq','overlapGenes'])\n",
     "    genes.sort_values(by=['sequenceID','start'],inplace=True)\n",
@@ -226,11 +247,18 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def recordAnnotation(nodeID,accessionID,og,atList,nodesAnnotation):\n",
+    "def recordAnnotation(nodeID,accessionID,sequenceID,og,atList,nodesAnnotation,nodesChr):\n",
+    "    if len(nodesAnnotation)==nodeID-1:\n",
+    "        nodesAnnotation.append({})\n",
+    "        \n",
     "    nodesAnnotation[nodeID-1].setdefault(accessionID,{})[og] = [(0,len(og)-1)]\n",
     "    for at in atList:\n",
     "        nodesAnnotation[nodeID-1].setdefault(accessionID,{})[at] = [(0,len(at)-1)]\n",
-    "    "
+    "    \n",
+    "    if len(nodesChr)==nodeID-1:\n",
+    "        nodesChr.append({})\n",
+    "        \n",
+    "    nodesChr[nodeID-1].setdefault(accessionID,[]).append(sequenceID)"
    ]
   },
   {
@@ -257,8 +285,11 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def generatePathsLinks(genes,sequenceID,accessionID,sequences,OGList,segmentIDs,nodeAnnotation,segmentIDToNumDict,links,usCounter,doUS=True,\n",
-    "                       segmentData=None,gfaFile=None):\n",
+    "def generatePathsLinks(genes,sequenceID,accessionID,\n",
+    "                       sequences,OGList,segmentIDs,\n",
+    "                       nodeAnnotation,nodesChr,\n",
+    "                       segmentIDToNumDict,links,usCounter,\n",
+    "                       doUS=True,segmentData=None,gfaFile=None):\n",
     "    '''\n",
     "    `gfaFile`: file handle to write segments to GFA file\n",
     "    `OGList`: mutable\n",
@@ -278,11 +309,11 @@
     "        if curSeqID != geneSeqID:\n",
     "            curSeqID = geneSeqID\n",
     "        \n",
-    "        atStr = gene[1].at_STR\n",
-    "        if len(atStr)>0:\n",
-    "            atList = atStr.split(',')\n",
+    "        atStr = gene[1].AT_str\n",
+    "        if len(atStr[0])>0:\n",
+    "            atList = atStr\n",
     "        else:\n",
-    "            atStr = []\n",
+    "            atList = []\n",
     "        \n",
     "        geneStart = gene[1].start\n",
     "        geneEnd = gene[1].end\n",
@@ -312,7 +343,7 @@
     "\n",
     "            if isUS:\n",
     "                usID = recordSegment(us,segmentIDs,segmentIDToNumDict,usSeq,gfaFile=gfaFile,segmentData=segmentData)\n",
-    "                recordAnnotation(usID,accessionID,us,[],nodeAnnotation)\n",
+    "                recordAnnotation(usID,accessionID,geneSeqID,us,[],nodeAnnotation,nodesChr)\n",
     "        \n",
     "        if og not in OGList:\n",
     "            ogID = recordSegment(og,segmentIDs,segmentIDToNumDict,geneSeq,gfaFile=gfaFile,segmentData=segmentData)\n",
@@ -320,7 +351,7 @@
     "        else:\n",
     "            ogID = segmentIDs.index(og)+1\n",
     "        \n",
-    "        recordAnnotation(ogID,accessionID,og,atList,nodeAnnotation)\n",
+    "        recordAnnotation(ogID,accessionID,geneSeqID,og,atList,nodeAnnotation,nodesChr)\n",
     "        \n",
     "        pathAdd = [f'{ogID}{\"+\" if geneForward else \"-\"}']\n",
     "        if doUS and isUS:\n",
@@ -354,7 +385,7 @@
     "        if len(usSeq)>0:\n",
     "            us = f'US{usCounter:07d}'\n",
     "            usID = recordSegment(us,segmentIDs,segmentIDToNumDict,usSeq,gfaFile=gfaFile,segmentData=segmentData)\n",
-    "            recordAnnotation(usID,accessionID,us,[],nodeAnnotation)\n",
+    "            recordAnnotation(usID,accessionID,geneSeqID,us,[],nodeAnnotation,nodesChr)\n",
     "            usCounter += 1\n",
     "            path.append(f'{usID}+')\n",
     "            cigar.append('0M')\n",
@@ -393,229 +424,6 @@
     "def readSegmentIDs(path):\n",
     "    with open(path,'r') as jsf:\n",
     "        return json.load(jsf)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "fileOrder = generateOrder(annotationFiles)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "usCounter = 0\n",
-    "links = {}\n",
-    "OGList = []\n",
-    "segmentIDs = []"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "accessionID,genes,sequences = processAccession(annotationFiles[0],None)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "accessionID"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "genes"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "sequences"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "q = list(sequences.keys())\n",
-    "q.sort()\n",
-    "q"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "gfaFile.close()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "gfaFile = open(f'{gfadir}{os.path.sep}{gfaFilename}',mode='w')\n",
-    "gfaFile.write('H\\tVN:Z:1.0\\n')"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "for accessionNum in [0,1]:\n",
-    "    fileNum = fileOrder[accessionNum]\n",
-    "\n",
-    "    accessionID,genes,sequences = processAccession(annotationFiles[fileNum],sequenceFiles[fileNum])\n",
-    "\n",
-    "    seqID = f'{accessionID}{seqSuffix}'\n",
-    "\n",
-    "    path,cigar,usCounter = generatePathsLinks(gfaFile,genes.loc[genes.sequenceID==seqID],sequences,\n",
-    "                                    OGList,segmentIDs,links,usCounter=usCounter,doUS=doUS)\n",
-    "\n",
-    "    writePath(gfaFile,seqID,path,cigar,doCigars=doCigars)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "writeLinks(gfaFile,links,doCigars=doCigars)\n",
-    "gfaFile.close()\n",
-    "writeSegmentIDs(f'{gfadir}{os.path.sep}segName_{os.path.splitext(gfaFilename)[0]}.json',segmentIDs)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "for og in transMap.index:\n",
-    "    if doSequences:\n",
-    "        gfaFile.write(f'S\\t{og}\\t{og:_<9}\\n')\n",
-    "    else:\n",
-    "        gfaFile.write(f'S\\t{og}\\t*\\tUR:Z:./fasta/{og}.fa\\n')        "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "path = []\n",
-    "cigar = []\n",
-    "prevEnd = 0\n",
-    "for gene in genes.iterrows():\n",
-    "    path.append(gene[1].orthogroup)\n",
-    "    gene[1].orthogroup\n",
-    "    gene[1].start\n",
-    "    gene[1].end"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "q.metadata['id'],q.values"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "bytearray(q.values).decode()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "accessionNum = 0\n",
-    "annotation = skbio_read(annotationFiles[accessionNum], format='gff3')#, into=IntervalMetadata, seq_id=f'{accessionID}_Chr1')\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "for ann in annotation:\n",
-    "    print(ann[0])"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "ann[1]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "seqID = f'{accessionID}_Chr1'\n",
-    "\n",
-    "# This is needed only for processing one sequence. \n",
-    "# If we process the whole accession, we will go sequence by sequence.\n",
-    "for seq in sequenceGen:\n",
-    "    if seq.metadata['id']==seqID:\n",
-    "        sequence = bytearray(seq.values).decode()\n",
-    "        annotation = skbio_read(annotationFiles[accessionNum], format='gff3', \n",
-    "                                into=IntervalMetadata, seq_id=seq.metadata['id'])\n",
-    "\n",
-    "\n",
-    "# annotation = skbio_read(annotationFiles[accessionNum], format='gff3', into=IntervalMetadata, seq_id=seqID)\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "geneInts = annotation.query(metadata={'type':'gene'})"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "genes = []\n",
-    "for gene in geneInts:\n",
-    "    geneID = gene.metadata['ID'][7:]\n",
-    "    orthogroup = gene.metadata['OG']\n",
-    "    forward = gene.metadata['strand']=='+'\n",
-    "    start,end = gene.bounds[0]\n",
-    "    geneSeq = sequence[start:end+1]\n",
-    "    overlaps = getIDs(annotation.query(bounds=[(start,end)],metadata={'type':'gene'}))\n",
-    "    genes.append([geneID,orthogroup,seqID,accessionID,forward,start,end,geneSeq,overlaps])\n",
-    "print(len(genes))\n",
-    "genes = pd.DataFrame(genes,columns=['geneID','orthogroup','sequenceID','accessionID','forward','start','end','geneSeq','overlapGenes'])\n",
-    "genes.sort_values(by='start',inplace=True)\n",
-    "genes"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "path = []\n",
-    "cigar = []\n",
-    "prevEnd = 0\n",
-    "for gene in genes.iterrows():\n",
-    "    path.append(gene[1].orthogroup)\n",
-    "    gene[1].orthogroup\n",
-    "    gene[1].start\n",
-    "    gene[1].end"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# example of combining of all gene names from all accessions from one orthogroup\n",
-    "q = [item for s in transMap.loc['OG0000001'].dropna().to_list() for item in s.split(',')]"
    ]
   }
  ],
