--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -195,8 +195,8 @@
     "\n",
     "    1) The inverse directory bd.inverse auto-updates itself when the standard\n",
     "        dict bd is modified.\n",
-    "    2) The inverse directory bd.inverse[value] is always a list of key such\n",
-    "        that bd[key] == value.\n",
+    "    2) The inverse directory bd.inverse[value] is always a list of keys such\n",
+    "        that value in bd[key] for each key.\n",
     "    3) Unlike the bidict module from https://pypi.python.org/pypi/bidict,\n",
     "        here we can have 2 keys having same value, this is very important.\n",
     "    4) After modification, values in the \"forward\" (not inversed) dict\n",
@@ -205,7 +205,7 @@
     "\n",
     "    For implementing 4), new method `add` was introduced.\n",
     "    If d[key].append(value) attempted, the link between main and inversed dict\n",
-    "    will be broken. Method `add` can accept both \n",
+    "    will be broken. Method `add` can accept both\n",
     "\n",
     "    Credit:\n",
     "    Implemented as an answer to\n",
@@ -214,7 +214,7 @@
     "    '''\n",
     "\n",
     "    def __init__(self, *args, **kwargs):\n",
-    "        super(bidict, self).__init__(*args, **kwargs)\n",
+    "        super().__init__(*args, **kwargs)\n",
     "        self.inverse = {}\n",
     "        for key, value in self.items():\n",
     "            if isinstance(value, Iterable):\n",
@@ -522,7 +522,7 @@
     "    numSegmentDigits = int(np.ceil(np.log10(numSegments)))\n",
     "\n",
     "    for nodeID,node in enumerate(segmentList):\n",
-    "        print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
+    "        print(f'\\nLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
     "        segmentArray = node.rstrip().split(sep='\\t')\n",
     "        segID,segGFAData = segmentArray[1:3]\n",
     "        segSeq = segGFAData\n",
@@ -542,7 +542,7 @@
     "    forwardLinks = {}\n",
     "\n",
     "    for linkID,link in enumerate(linkList):\n",
-    "        print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
+    "        print(f'\\nLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
     "        linkArray = link.rstrip().split(sep='\\t')\n",
     "        fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
     "        fromNode = nodeNameToID[fromNodeID]\n",
@@ -562,7 +562,7 @@
     "    addedPaths = 0\n",
     "    ignoredPaths = 0\n",
     "    for pathID,pathString in enumerate(pathStringsList):\n",
-    "        print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "        print(f'\\nLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
     "        pathArray = pathString.rstrip().split(sep='\\t')\n",
     "        seqID,path = pathArray[1:3]\n",
     "        useAccession = True\n",
