--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -105,7 +105,7 @@
     "    nodeLengths = [0]*numNodes\n",
     "    \n",
     "    for nodeIdx in range(numNodes):\n",
-    "        print(f'\\rProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
+    "        print(f'\\nProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
     "        if graph.nodesData[nodeIdx]=='':\n",
     "            nodeLengths[nodeIdx] = len(graph.nodes[nodeIdx])\n",
     "        else:\n",
@@ -136,7 +136,7 @@
     "    pathDirArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.bool) # True - \"+\", False - \"-\" or padding for shorter paths.\n",
     "\n",
     "    for i,path in enumerate(graph.paths):\n",
-    "        print(f'\\rProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
+    "        print(f'\\nProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
     "        pathLengths.append(len(path))\n",
     "\n",
     "        pathNodeArray[i,:pathLengths[-1]] = [int(node[:-1]) for node in path]\n",
@@ -203,11 +203,35 @@
     "                 doBack=False,**kwargs):\n",
     "        \n",
     "        '''\n",
-    "        accessionsToRemove: list or None. If not None, a list of strings, if any of the string contains in pathname, the path will be ignored.\n",
+    "        Priority 1: If you pass gfaPath as actual path to gfa file, then it will be loaded ignoring other options\n",
+    "        accessionsToRemove: list or None (default). If not None, a list of strings, if any of the string contains \n",
+    "        in pathname, the path will be ignored.\n",
+    "        In this case, the following options are available:\n",
+    "            `isGFASeq`: boolean (default: True). Whether the graph should be considered as sequence graph (True)\n",
+    "                        or as gene/block graph (False).\n",
+    "        \n",
+    "        Priority 4: If annotationFiles is not None, but is a list of paths to annotation (gff3) files, \n",
+    "        then the following extra options are available:\n",
+    "            `fileOrder`: list or None (default) Order in which each accession should be loaded into the \n",
+    "                         graph (and order in which paths will be represented)\n",
+    "            `doUS`: boolean (default: False) Add unrelated sequence blocks between annotated genes/blocks.\n",
+    "            `refAnnotationFile`: str. If given, it has to be a path to gff3 file with reference annotation \n",
+    "                                 with AT notation for gene names. For this, `transMap` has to be provided.\n",
+    "            `refSequenceFile`: str or None (default). If provided with path, then it will be used to obtain \n",
+    "                               sequences of each block/gene.\n",
+    "            `transMap`: a bidict object (`util` module) or None (default). A dictionary ontaining bidirectional \n",
+    "                        relation between OG notation of genes and AT notation of genes. \n",
+    "                        It is required if refAnnotationFile is provided.\n",
+    "            `seqSuffix`: str or None (default). Which sequence suffix within each annotation to use. \n",
+    "                         If None, it will run all sequences in each annotation in lexicographic order\n",
+    "                         and join them together (e.g. end of chr1 will be joined to start of chr2).\n",
+    "            `refAccession`: str or None (default). Optional accession ID for reference annotation (if not the same as the file name).\n",
+    "        \n",
     "        '''\n",
     "        self.nodes = []\n",
     "        self.nodesData = []\n",
     "        self.nodesAnnotation = []\n",
+    "        self.nodesChr = []\n",
     "        self.forwardLinks = {}\n",
     "        self.overlaps = {}\n",
     "        self.paths = []\n",
@@ -340,7 +364,7 @@
     "            raise ValueError('Incorrect GFA file format. No segments were found')\n",
     "        \n",
     "        for nodeID,node in enumerate(segmentList):\n",
-    "            print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
+    "            print(f'\\nLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
     "            segmentArray = node.rstrip().split(sep='\\t')\n",
     "            segID,segGFAData = segmentArray[1:3]\n",
     "            if isGFASeq:\n",
@@ -372,7 +396,7 @@
     "            numLinkDigits = 1\n",
     "        \n",
     "        for linkID,link in enumerate(linkList):\n",
-    "            print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
+    "            print(f'\\nLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
     "            linkArray = link.rstrip().split(sep='\\t')\n",
     "            fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
     "            overlap = linkArray[5]\n",
@@ -396,7 +420,7 @@
     "        addedPaths = 0\n",
     "        ignoredPaths = 0\n",
     "        for pathID,pathString in enumerate(pathStringsList):\n",
-    "            print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "            print(f'\\nLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
     "            pathArray = pathString.rstrip().split(sep='\\t')\n",
     "            seqID,path = pathArray[1:3]\n",
     "            useAccession = True\n",
@@ -503,43 +527,69 @@
     "        \n",
     "        self.forwardLinks = dict([(fromNode,dict([(fromStrand,list(toSet)) for fromStrand,toSet in strandDict.items()])) for fromNode,strandDict in links.items()])\n",
     "        self.nodesData = ['']*len(self.nodes)\n",
-    "        \n",
+    "    \n",
+    "    def _processAnnotation(self, annotationFile, links, ATmap=None, seqFile=None, seqSuffix=None, doUS=False, isRef=False, accID=None):\n",
+    "        accessionID, genes, sequences = \\\n",
+    "            processAccession(annotationFile,\n",
+    "                             seqFile,\n",
+    "                             ATmap=ATmap,\n",
+    "                             isRef=isRef,\n",
+    "                             accID=accID)\n",
+    "        if seqSuffix is None:\n",
+    "            seqList = genes.sequenceID.unique().tolist()\n",
+    "            seqList.sort()\n",
+    "        else:\n",
+    "            seqList = [f'{accessionID}{seqSuffix}']\n",
+    "\n",
+    "        path = []\n",
+    "        for seqID in seqList:\n",
+    "\n",
+    "            p, cigar, usCounter = generatePathsLinks(genes.loc[genes.sequenceID == seqID], seqID, accessionID, sequences, self.OGList,\n",
+    "                                                     self.nodes, self.nodesAnnotation, self.nodesChr, self.nodeNameToID, links,\n",
+    "                                                     self.usCounter, doUS=doUS, segmentData=self.nodesData)\n",
+    "            path = path + p\n",
+    "        if isRef:\n",
+    "            self.paths.insert(0,path)\n",
+    "            self.accessions.insert(0,accessionID)\n",
+    "        else:\n",
+    "            self.paths.append(path)\n",
+    "            self.accessions.append(accessionID)\n",
+    "\n",
+    "        return links\n",
+    "    \n",
     "    def _graphFromAnnotation(self,annotationFiles,sequenceFiles=None,**kwargs):\n",
-    "        \n",
     "        self.nodeNameToID = {}\n",
+    "\n",
+    "        fileOrder = kwargs.get('fileOrder',list(range(len(annotationFiles))))\n",
     "        \n",
-    "        try:\n",
-    "            fileOrder = kwargs['fileOrder']\n",
-    "        except KeyError:\n",
-    "            fileOrder = list(range(len(annotationFiles)))\n",
-    "            \n",
-    "        doUS = kwargs['doUS']\n",
+    "        doUS = kwargs.get('doUS',False)\n",
     "        self.usCounter = 0\n",
     "        self.OGList = []\n",
     "        links = self._linksDictToSet(self.forwardLinks)\n",
+    "\n",
+    "        if 'refAnnotationFile' in kwargs:\n",
+    "            links = self._processAnnotation(kwargs['refAnnotationFile'], links,\n",
+    "                                            ATmap=kwargs.get('transMap', None),\n",
+    "                                            seqFile=kwargs.get('refSequenceFile',None),\n",
+    "                                            seqSuffix=kwargs.get('seqSuffix', None),\n",
+    "                                            doUS=doUS,\n",
+    "                                            isRef=True,\n",
+    "                                            accID=kwargs.get('refAccession',None))\n",
     "        \n",
     "        for fileNum in fileOrder:\n",
     "            if sequenceFiles is not None:\n",
     "                seqFile = sequenceFiles[fileNum]\n",
     "            else:\n",
     "                seqFile = None\n",
-    "            accessionID,genes,sequences = processAccession(annotationFiles[fileNum],seqFile)\n",
-    "            try:\n",
-    "                seqList = [f'{accessionID}{kwargs[\"seqSuffix\"]}']\n",
-    "            except KeyError:\n",
-    "                seqList = genes.sequenceID.unique().tolist()\n",
-    "                seqList.sort()\n",
-    "            path = []\n",
-    "            for seqID in seqList:\n",
-    "                \n",
-    "                p,cigar,usCounter = generatePathsLinks(genes.loc[genes.sequenceID==seqID],seqID,accessionID,sequences,self.OGList,\n",
-    "                                                       self.nodes,self.nodesAnnotation,self.nodeNameToID,links,\n",
-    "                                                       self.usCounter,doUS=doUS,segmentData=self.nodesData)\n",
-    "                path = path + p\n",
-    "            self.paths.append(path)\n",
-    "            self.accessions.append(accessionID)\n",
-    "            \n",
+    "             # annotationFile\n",
+    "             # transMap\n",
+    "            links = self._processAnnotation(annotationFiles[fileNum], links,\n",
+    "                                            ATmap=kwargs.get('transMap', None),\n",
+    "                                            seqFile=seqFile,\n",
+    "                                            seqSuffix=kwargs.get('seqSuffix', None),\n",
+    "                                            doUS=doUS)\n",
     "        \n",
+    "\n",
     "        self.forwardLinks = self._linksSetToDict(links)\n",
     "    \n",
     "    def _linksDictToSet(self,dictLinks):\n",
@@ -1130,15 +1180,15 @@
     "                nodeLengths[node-1] -= maxCutAdjustment\n",
     "        for nodeStrand in leftToCut:\n",
     "            del self.overlaps[nodeStrand]\n",
-    "            \n",
+    "\n",
     "    def removeOverlaps(self):\n",
     "        nodeIDsToRemove = []\n",
     "        leftCut = {}\n",
     "        rightCut = {}\n",
-    "        \n",
+    "\n",
     "        leftForbidden = list(set([(int(path[-1][:-1]),path[-1][-1]) for path in self.paths])) # Nodes which should not be cut on the left side of link\n",
     "        rightForbidden = list(set([(int(path[0][:-1]),path[-1][-1]) for path in self.paths])) # Nodes which should not be cut on the right side of link\n",
-    "        \n",
+    "\n",
     "        revertLinks = self._revertLinks()\n",
     "        nodeLengths = calcNodeLengths(self)\n",
     "        print('nodeLengths')\n",
