Complete change to zoom layers forming (removing links associated to too small blocks) including changing layer processing and parallelising some processes; Added capability to add annotation from nodes on later stages; Fixed `pathFileToPathDict` function; fixed several small bugs; added capability to reset redis DB.

--- a/03_synteny.ipynb
+++ b/03_synteny.ipynb
@@ -187,13 +187,16 @@
     "        for gene in geneInts:\n",
     "            geneID = gene.metadata['ID'].split('.')[-1]\n",
     "            if isRef and ATmap is not None:\n",
-    "                orthogroup = ATmap.inverse.get(geneID,[geneID])[0]\n",
+    "                orthogroup = ATmap.inverse.get(geneID,[None])[0]\n",
     "            elif isRef:\n",
     "                raise ValueError(\"If reference is provided, then the TransMap (bidict) with bidirectional relation between reference and annotation IDs should be provided.\")\n",
     "                #orthogroup = gene.metadata['ID']\n",
     "            else:\n",
     "                orthogroup = gene.metadata['OG']\n",
-    "                \n",
+    "            \n",
+    "            if orthogroup is None:\n",
+    "                continue\n",
+    "            \n",
     "            if ATmap is not None:\n",
     "                atNamesStr = ATmap.get(orthogroup,[''])\n",
     "            else:\n",
