--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -45,6 +45,7 @@
       "Converted 04_utils.ipynb.\n",
       "Converted 05_export.ipynb.\n",
       "Converted deBruijnGraphProcessing.ipynb.\n",
+      "Converted graphTesting.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -69,7 +70,9 @@
     "import numpy as np\n",
     "import os\n",
     "import random\n",
-    "import joblib"
+    "import joblib\n",
+    "\n",
+    "from redis import Redis"
    ]
   },
   {
@@ -106,6 +109,20 @@
     "    joblib.dump(caseToDBID,pathToDictFile)\n",
     "\n",
     "    return dbid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def resetDB(pathToDictFile,redisServer='redis',port=6379):\n",
+    "    os.remove(pathToDictFile)\n",
+    "    conn = Redis(host=redisServer,port=port,db=0)\n",
+    "    conn.flushall()\n",
+    "    return 0"
    ]
   },
   {
@@ -269,17 +286,100 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def pathFileToPathDict(filePath,directional=True):\n",
-    "    paths = {}\n",
+    "def pathFileToPathDict(filePath,directional=True,sort=True):\n",
+    "    '''\n",
+    "    Reads path file (ASCII file) and translates it to path dictionary for `GenGraph` class constructor.\n",
+    "    \n",
+    "    Path file has a path on each line in the following format:\n",
+    "    <path name>: <nodeID[+|-]>[,<nodeID[+,-]>]\n",
+    "    \n",
+    "    Parameters\n",
+    "    ==========\n",
+    "    \n",
+    "    `filePath`: str. Absolute path to the path file.\n",
+    "    `directional`: boolean (default: True). Whether the path file contains \n",
+    "                   directionality (whether nodeID has `+` or `-` at the end). \n",
+    "                   If False (the file does not contain directionality marks), \n",
+    "                   then all nodes in all paths are treated as positive (not inverted).\n",
+    "    `sort`: boolean, str or iterable (e.g. list). If Boolean, true means that the paths should be sorted\n",
+    "            in lexicographic order (by names) and appear in the path dict in sorted order. If False,\n",
+    "            then no sorting is done and paths will appear as they are in the file. If iterable with \n",
+    "            indexes of the paths (from 0 to n-1 for n paths), then this particular order will be used\n",
+    "            in the paths dictionary. If str, then it should provide a single path name that should appear \n",
+    "            first with the rest being sorted in lexicographic order.\n",
+    "            \n",
+    "    Return\n",
+    "    ======\n",
+    "    \n",
+    "    `paths`: a dictionary with path names as keys and lists of nodeID (str) with directionality markers (`+` or `-`) \n",
+    "             at the end as values.\n",
+    "    \n",
+    "    '''\n",
+    "    _paths = {}\n",
     "    with open(filePath) as f:\n",
     "        for line in f:\n",
     "            pathName,pathNodeList = line.strip(' \\n\\t').split(':')\n",
     "            if directional:\n",
-    "                paths[pathName] = pathNodeList.strip().split(',')\n",
+    "                _paths[pathName] = pathNodeList.strip().split(',')\n",
     "            else:\n",
-    "                paths[pathName] = [f'{node}+' for node in pathNodeList.strip().split(',')]\n",
+    "                _paths[pathName] = [f'{node}+' for node in pathNodeList.strip().split(',')]\n",
+    "    \n",
+    "    if isinstance(sort,bool):\n",
+    "        if sort:\n",
+    "            paths = {}\n",
+    "            for accession in sorted(list(_paths.keys())):\n",
+    "                paths[accession] = _paths[accession]\n",
+    "            del _paths\n",
+    "        else:\n",
+    "            paths = _paths\n",
+    "    elif isinstance(sort,str):\n",
+    "        paths = {}\n",
+    "        pathNamesList = list(_paths.keys())\n",
+    "        try:\n",
+    "            paths[sort] = _paths[sort]\n",
+    "            pathNamesList.remove(sort)\n",
+    "        except KeyError:\n",
+    "            Warning(f'Path name {sort} was not found in path file. All paths are sorted in lexicographic order')\n",
+    "        for accession in sorted(pathNamesList):\n",
+    "            paths[accession] = _paths[accession]\n",
+    "        del _paths\n",
+    "    elif isinstance(sort,Iterable):\n",
+    "        paths = {}\n",
+    "        pathNamesList = list(_paths.keys())\n",
+    "        for pathInd in sort:\n",
+    "            accession = pathNamesList[pathInd]\n",
+    "            paths[accession] = _path[accession]\n",
+    "        del _paths\n",
+    "    else:\n",
+    "        paths = _paths\n",
     "    \n",
     "    return paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['TAIR10', '10002', '10015', '10024', '1741', '22001', '22002', '22003', '22004', '22005', '22006', '22007', '6024', '6069', '6124', '6244', '6909', '6966', '8236', '9075', '9537', '9543', '9638', '9728', '9764', '9888', '9905', '9981'])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# WRITE UNIT TESTS FOR pathFileToPathDict!!!\n",
+    "import os\n",
+    "pathfileDir = '../../1001G/coreGraph'\n",
+    "pathsfile = 'paths_f2.1_Ref_v03.txt'\n",
+    "\n",
+    "paths = pathFileToPathDict(f'{pathfileDir}{os.path.sep}{pathsfile}',True,sort='TAIR10')\n",
+    "paths.keys()"
    ]
   },
   {
