--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -45,6 +45,7 @@
       "Converted 04_utils.ipynb.\n",
       "Converted 05_export.ipynb.\n",
       "Converted deBruijnGraphProcessing.ipynb.\n",
+      "Converted graphTesting.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -105,7 +106,7 @@
     "    nodeLengths = [0]*numNodes\n",
     "    \n",
     "    for nodeIdx in range(numNodes):\n",
-    "        print(f'\\nProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
+    "        print(f'\\rProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
     "        if graph.nodesData[nodeIdx]=='':\n",
     "            nodeLengths[nodeIdx] = len(graph.nodes[nodeIdx])\n",
     "        else:\n",
@@ -136,7 +137,7 @@
     "    pathDirArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.bool) # True - \"+\", False - \"-\" or padding for shorter paths.\n",
     "\n",
     "    for i,path in enumerate(graph.paths):\n",
-    "        print(f'\\nProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
+    "        print(f'\\rProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
     "        pathLengths.append(len(path))\n",
     "\n",
     "        pathNodeArray[i,:pathLengths[-1]] = [int(node[:-1]) for node in path]\n",
@@ -252,7 +253,7 @@
     "            self.forwardLinks = links\n",
     "            self.paths = paths\n",
     "        elif pathsDict is not None:\n",
-    "            self._graphFromPaths(pathsDict) # sequenceFiles can be None\n",
+    "            self._graphFromPaths(pathsDict,**kwargs) # sequenceFiles can be None\n",
     "        elif annotationFiles is not None:\n",
     "            self._graphFromAnnotation(annotationFiles,sequenceFiles,**kwargs)\n",
     "        \n",
@@ -364,7 +365,7 @@
     "            raise ValueError('Incorrect GFA file format. No segments were found')\n",
     "        \n",
     "        for nodeID,node in enumerate(segmentList):\n",
-    "            print(f'\\nLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
+    "            print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
     "            segmentArray = node.rstrip().split(sep='\\t')\n",
     "            segID,segGFAData = segmentArray[1:3]\n",
     "            if isGFASeq:\n",
@@ -396,7 +397,7 @@
     "            numLinkDigits = 1\n",
     "        \n",
     "        for linkID,link in enumerate(linkList):\n",
-    "            print(f'\\nLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
+    "            print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
     "            linkArray = link.rstrip().split(sep='\\t')\n",
     "            fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
     "            overlap = linkArray[5]\n",
@@ -420,7 +421,7 @@
     "        addedPaths = 0\n",
     "        ignoredPaths = 0\n",
     "        for pathID,pathString in enumerate(pathStringsList):\n",
-    "            print(f'\\nLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "            print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
     "            pathArray = pathString.rstrip().split(sep='\\t')\n",
     "            seqID,path = pathArray[1:3]\n",
     "            useAccession = True\n",
@@ -469,7 +470,33 @@
     "                        atNameList = atNameStr.split(',')\n",
     "                        for atName in atNameList:\n",
     "                            nodeDict.setdefault(atName,[]).append((leftNodeBound,rightNodeBound))\n",
-    "                    \n",
+    "    \n",
+    "    def updateAnnotationFromNodes(self,isSeq=True):\n",
+    "        '''\n",
+    "        This function is used only for primitive block graphs (e.g. gene and chain graphs)\n",
+    "        if there is no proper annotation available (e.g. graph was created from paths and \n",
+    "        some extra information about nodes is needed).\n",
+    "\n",
+    "        It takes \"name\" of each node either from `graph.nodes` (if `isSeq` is False) or\n",
+    "        from `graph.nodesData` (if `isSeq` is True).\n",
+    "\n",
+    "        Parameters\n",
+    "        ##########\n",
+    "\n",
+    "        `isSeq`: Whether it contains names as names or as seq.\n",
+    "        '''\n",
+    "        offset = 0\n",
+    "        for annID in range(len(self.nodesAnnotation)):\n",
+    "            if isSeq:\n",
+    "                nodeSeq = self.nodesData[annID]\n",
+    "            else:\n",
+    "                nodeSeq = self.nodes[annID]\n",
+    "            annEl = self.nodesAnnotation[annID]\n",
+    "            updatedAnnEl = {}\n",
+    "            for pathName in annEl:\n",
+    "                updatedAnnEl[pathName] = {nodeSeq:[(0,len(nodeSeq)-1)]}\n",
+    "            self.nodesAnnotation[annID] = updatedAnnEl\n",
+    "    \n",
     "    def _graphFromNodesLinks(self,nodes,links):\n",
     "        raise NotImplementedError('Generating graph from nodes and links is not yet implemented.')\n",
     "    \n",
@@ -486,7 +513,7 @@
     "            \n",
     "        return nodeID\n",
     "    \n",
-    "    def _graphFromPaths(self,paths,sequenceFiles=None):\n",
+    "    def _graphFromPaths(self,paths,sequenceFiles=None,nodeNameLength=None):\n",
     "        if sequenceFiles is not None:\n",
     "            warnings.warn(\"sequenceFiles reading with path is not yet implemented.\")\n",
     "        \n",
@@ -494,7 +521,10 @@
     "            raise ValueError(f\"paths should be dict but {type(paths)} was given.\")\n",
     "        \n",
     "#         if sequenceFiles is None:\n",
-    "        maxNodeNameLength = len(max([max(path,key=lambda a: len(a)) for path in paths.values()],key=lambda a: len(a))) - 1\n",
+    "        if nodeNameLength is None:\n",
+    "            maxNodeNameLength = len(max([max(path,key=lambda a: len(a)) for path in paths.values()],key=lambda a: len(a))) - 1\n",
+    "        else:\n",
+    "            maxNodeNameLength = nodeNameLength\n",
     "        \n",
     "        self.nodeNameToID = {}\n",
     "        self.nodes = []\n",
