--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -106,7 +106,7 @@
     "    nodeLengths = [0]*numNodes\n",
     "    \n",
     "    for nodeIdx in range(numNodes):\n",
-    "        print(f'\\rProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
+    "        print(f'\\nProcessing node {nodeIdx+1:0{numNodesDigits}}/{numNodes:0{numNodesDigits}}',end='')\n",
     "        if graph.nodesData[nodeIdx]=='':\n",
     "            nodeLengths[nodeIdx] = len(graph.nodes[nodeIdx])\n",
     "        else:\n",
@@ -137,7 +137,7 @@
     "    pathDirArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.bool) # True - \"+\", False - \"-\" or padding for shorter paths.\n",
     "\n",
     "    for i,path in enumerate(graph.paths):\n",
-    "        print(f'\\rProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
+    "        print(f'\\nProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
     "        pathLengths.append(len(path))\n",
     "\n",
     "        pathNodeArray[i,:pathLengths[-1]] = [int(node[:-1]) for node in path]\n",
@@ -365,7 +365,7 @@
     "            raise ValueError('Incorrect GFA file format. No segments were found')\n",
     "        \n",
     "        for nodeID,node in enumerate(segmentList):\n",
-    "            print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
+    "            print(f'\\nLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
     "            segmentArray = node.rstrip().split(sep='\\t')\n",
     "            segID,segGFAData = segmentArray[1:3]\n",
     "            if isGFASeq:\n",
@@ -397,7 +397,7 @@
     "            numLinkDigits = 1\n",
     "        \n",
     "        for linkID,link in enumerate(linkList):\n",
-    "            print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
+    "            print(f'\\nLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
     "            linkArray = link.rstrip().split(sep='\\t')\n",
     "            fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
     "            overlap = linkArray[5]\n",
@@ -421,7 +421,7 @@
     "        addedPaths = 0\n",
     "        ignoredPaths = 0\n",
     "        for pathID,pathString in enumerate(pathStringsList):\n",
-    "            print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "            print(f'\\nLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
     "            pathArray = pathString.rstrip().split(sep='\\t')\n",
     "            seqID,path = pathArray[1:3]\n",
     "            useAccession = True\n",
