Development changes to notebooks.

--- a/index.ipynb
+++ b/index.ipynb
@@ -24117,7 +24117,7 @@
       "Recording component 7/7\n",
       "Recording zoom level 1 finished.\n",
       "Identifying collapsible blocks!\n",
-      "Identified 62 collapsible block lengths\n",
+      "Identified 43 collapsible block lengths\n",
       "Removing links according to collapsible blocks\n",
       "All links associated with collapsibleComponents <2 were removed. Used 0,     0 were deleted as isolated.\n",
       "\n",
@@ -24137,7 +24137,7 @@
       "Recording component 7/7\n",
       "Recording zoom level 4 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <8 were removed. Used 25,     1 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <8 were removed. Used 19,     1 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 8\n",
@@ -24146,23 +24146,14 @@
       "Recording component 6/6\n",
       "Recording zoom level 8 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <16 were removed. Used 31,     0 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <16 were removed. Used 23,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 16\n",
       "===========================\n",
       "Processing component 6/6\n",
       "Recording component 5/5\n",
-      "Recording zoom level 16 finished.\n",
-      "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <32 were removed. Used 26,     0 were deleted as isolated.\n",
-      "\n",
-      "===========================\n",
-      "Zoom level 32\n",
-      "===========================\n",
-      "Processing component 5/5\n",
-      "Recording component 4/4\n",
-      "Recording zoom level 32 finished.\n"
+      "Recording zoom level 16 finished.\n"
      ]
     }
    ],
@@ -24194,7 +24185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executed in 1.7511320114135742 seconds\n"
+      "Executed in 0.42573094367980957 seconds\n"
      ]
     }
    ],
@@ -24529,7 +24520,7 @@
       "Recording component 362/362\n",
       "Recording zoom level 1 finished.\n",
       "Identifying collapsible blocks!\n",
-      "Identified 124 collapsible block lengths\n",
+      "Identified 80 collapsible block lengths\n",
       "Removing links according to collapsible blocks\n",
       "All links associated with collapsibleComponents <3 were removed. Used 0,     0 were deleted as isolated.\n",
       "\n",
@@ -24576,7 +24567,7 @@
       "Recording component 24/24\n",
       "Recording zoom level 72 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <144 were removed. Used 9,     0 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <144 were removed. Used 8,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 144\n",
@@ -24594,7 +24585,7 @@
       "Recording component 13/13\n",
       "Recording zoom level 288 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <576 were removed. Used 22,     0 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <576 were removed. Used 21,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 576\n",
@@ -24621,7 +24612,7 @@
       "Recording component 1/1\n",
       "Recording zoom level 2304 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <4608 were removed. Used 14,     0 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <4608 were removed. Used 4,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 4608\n",
@@ -24630,32 +24621,14 @@
       "Recording component 1/1\n",
       "Recording zoom level 4608 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <9216 were removed. Used 14,     0 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <9216 were removed. Used 6,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 9216\n",
       "===========================\n",
       "Processing component 1/1\n",
       "Recording component 1/1\n",
-      "Recording zoom level 9216 finished.\n",
-      "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <18432 were removed. Used 16,     0 were deleted as isolated.\n",
-      "\n",
-      "===========================\n",
-      "Zoom level 18432\n",
-      "===========================\n",
-      "Processing component 1/1\n",
-      "Recording component 1/1\n",
-      "Recording zoom level 18432 finished.\n",
-      "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <36864 were removed. Used 12,     0 were deleted as isolated.\n",
-      "\n",
-      "===========================\n",
-      "Zoom level 36864\n",
-      "===========================\n",
-      "Processing component 1/1\n",
-      "Recording component 1/1\n",
-      "Recording zoom level 36864 finished.\n"
+      "Recording zoom level 9216 finished.\n"
      ]
     }
    ],
@@ -24780,7 +24753,7 @@
     {
      "data": {
       "text/plain": [
-       "('../../1001G/pantograph/data', 'AT_Chr1_OGOnly_2.1_new', [1, 3, 9])"
+       "('../../1001G/pantograph/data', 'AT_Chr1_OGOnly_2.1_new2', [1, 3, 9])"
       ]
      },
      "execution_count": null,
@@ -24790,7 +24763,7 @@
    ],
    "source": [
     "zoomLevels = adjustZoomLevels(zoomLevels)\n",
-    "outputPath,outputName = pathConvert(coreGFApath,suffix='_new')\n",
+    "outputPath,outputName = pathConvert(coreGFApath,suffix='_new2')\n",
     "outputPath,outputName,zoomLevels"
    ]
   },
@@ -24803,7 +24776,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening Redis connection for db 1\n"
+      "Opening Redis connection for db 2\n"
      ]
     }
    ],
@@ -24844,7 +24817,7 @@
       "Preprocessing paths...\n",
       "Processing path 28/28\n",
       "Finished preprocessing paths\n",
-      "Recording Pantograph data to ../../1001G/pantograph/data/AT_Chr1_OGOnly_2.1_new\n",
+      "Recording Pantograph data to ../../1001G/pantograph/data/AT_Chr1_OGOnly_2.1_new2\n",
       "Calculating nodes length...\n",
       "Processing node 7455/7455\n",
       "Finished calculating nodes lengths\n",
@@ -24880,57 +24853,57 @@
       "Recording component 3609/3609\n",
       "Recording zoom level 9 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <18 were removed. Used 11865,     1109 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <18 were removed. Used 22169,     2768 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 18\n",
       "===========================\n",
-      "Processing component 2500/2500\n",
-      "Recording component 1425/1425\n",
+      "Processing component 841/841\n",
+      "Recording component 432/432\n",
       "Recording zoom level 18 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <36 were removed. Used 3194,     182 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <36 were removed. Used 3521,     383 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 36\n",
       "===========================\n",
-      "Processing component 1243/1243\n",
-      "Recording component 713/713\n",
+      "Processing component 49/49\n",
+      "Recording component 18/18\n",
       "Recording zoom level 36 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <72 were removed. Used 4095,     194 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <72 were removed. Used 85,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 72\n",
       "===========================\n",
-      "Processing component 519/519\n",
-      "Recording component 336/336\n",
+      "Processing component 18/18\n",
+      "Recording component 10/10\n",
       "Recording zoom level 72 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <144 were removed. Used 3836,     172 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <144 were removed. Used 84,     3 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 144\n",
       "===========================\n",
-      "Processing component 164/164\n",
-      "Recording component 104/104\n",
+      "Processing component 7/7\n",
+      "Recording component 4/4\n",
       "Recording zoom level 144 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <288 were removed. Used 2569,     79 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <288 were removed. Used 80,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 288\n",
       "===========================\n",
-      "Processing component 25/25\n",
-      "Recording component 17/17\n",
+      "Processing component 4/4\n",
+      "Recording component 4/4\n",
       "Recording zoom level 288 finished.\n",
       "Removing links according to collapsible blocks\n",
-      "All links associated with collapsibleComponents <576 were removed. Used 454,     12 were deleted as isolated.\n",
+      "All links associated with collapsibleComponents <576 were removed. Used 42,     0 were deleted as isolated.\n",
       "\n",
       "===========================\n",
       "Zoom level 576\n",
       "===========================\n",
-      "Processing component 5/5\n",
+      "Processing component 4/4\n",
       "Recording component 4/4\n",
       "Recording zoom level 576 finished.\n",
       "Removing links according to collapsible blocks\n",
@@ -26302,7 +26275,7 @@
    ],
    "source": [
     "for nodeIdx,nodeName in enumerate(coregraph.nodes):\n",
-    "    print(f'\\nNode {nodeIdx+1}/{len(coregraph.nodes)}',end='')\n",
+    "    print(f'\\rNode {nodeIdx+1}/{len(coregraph.nodes)}',end='')\n",
     "    geneList = chainToListDict.get(nodeName.zfill(maxChainLength), [f'ch{nodeName.zfill(7)}'])\n",
     "    geneIds = []\n",
     "    if geneList[0][:2]!='ch':\n",
